@@ -76,6 +76,13 @@ static int parse_args(int argc, char **argv)
 			continue;
 		}
 
+		if (strcmp(argv[i], "-d") == 0)
+		{
+			options.dir = argv[++i];
+			reading_input_filenames = 0;
+			continue;
+		}
+
 		if (strcmp(argv[i], "-i") == 0)
 		{
 			options.filenames[options.ninputfiles++] = argv[++i];
@@ -175,6 +182,9 @@ static int parse_args(int argc, char **argv)
                 usage();
 		return 77;
 	}
+
+	starpu_fxt_options_set_dir(&options);
+
 	return 0;
 }
 
@@ -184,6 +194,8 @@ int main(int argc, char **argv)
 	if (ret) return ret;
 
 	starpu_fxt_generate_trace(&options);
+
+	starpu_fxt_options_shutdown(&options);
 
 	return 0;
 }
